src/BadLang/Tests/BadC.Tests/tests/passing/operators/Div8.basm
.dependency TestFramework

.data data data_raw BASM_DATA
{
	.cstr FailMsg assembly "8-bit Div Failed"
}

.code code code_raw BadC
{
	void __main__() : export
	{
		i8 value = 10 / 2;

		TestFramework::Assert::Equals8(value, 5, &data::FailMsg);

		halt;
	}
}